<resources>
    <string name="app_name">HNews</string>
    <string name="no_news_found">No news found!</string>
    <string name="searching">Searching…</string>
    <string name="delete_article">Delete Article</string>
    <string name="saved_article">Article saved</string>
    <string name="welcome">Welcome To</string>
    <string name="breaking_news">Breaking News</string>
    <string name="saved_news">Saved News</string>
    <string name="settings">Settings</string>
    <string name="published_at">PUBLISHED AT</string>
    <string name="description">DESCRIPTION</string>
    <string name="source">SOURCE</string>
    <string name="title">TITLE</string>
    <string name="internet_not_connected">Internet not connected</string>
    <string name="network_failure_error">Network Failure Error</string>
    <string name="news_category">News Category</string>
    <string name="language">Language</string>
    <string name="sorted_by">SortedBy</string>
    <string name="country">Country</string>
    <string name="app_preference">APP PREFERENCE</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category">Category</string>
    <string name="i_spotted_a_bug">I Spotted a Bug</string>
    <string name="feedback">FEEDBACK</string>
    <string name="i_have_a_suggestion">I Have a Suggestion</string>
    <string name="hnews_v1_0_0">HNEWS v1.0.0</string>
    <string name="supporting_libraries">Supporting Libraries</string>
    <string name="developer_contacts">Developer Contacts</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="more_information">More Information</string>


</resources>